--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,4 @@
-
-
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=5ED91B4F499D083629CAF485387E6F77
-CopyrightNotice=Copyright K.Taukach
+ProjectID = 5ED91B4F499D083629CAF485387E6F77
+CopyrightNotice = Copyright K.Taukach
 
